# reporting_velib

./: .gitignore  README.md  main.py  pyproject.toml
data/: carte_velib.html  rapport_velib.xlsx  velib-disponibilite-en-temps-reel.csv  velib-disponibilite-en-temps-reel.parquet
notebooks/: exploration.ipynb
src/: config.py  report.py  utils.py
src/reporting_velib/: main.py  utils.py
src/reporting_velib.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
