[project]
name = "reporting_velib"
version = "0.1.0"
description = "Reporting automatisé Vélib"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl==3.1.3",
    "pandas>=3.0.2",
    "s3fs>=2026.3.0",
    "pyarrow>=15.0.0",
    "requests>=2.34.2",
    "matplotlib>=3.10.9",
    "geopandas>=1.1.3",
    "folium>=0.20.0",
]
